# adam-dls

./: CITATION.cff  LICENSE  README.md  Rosenbrock_benchmark.ipynb  pyproject.toml  requirements-benchmarks.txt  requirements.txt
adam_dls/: __init__.py  optimizer.py
baselines/: NoisyAdam.py  __init__.py  noisy_adam.py
benchmarks/: Rosenbrock_benchmark.ipynb
