[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "adam-dls"
version = "0.1.0"
description = "Darwinian Lineage Simulation Optimizer"
authors = [{name = "Daniel Grimmer", email = "daniel.grimmer@yale.edu"}]
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = ["torch>=2.0.0"]
