readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/danielgrimmer/adam-dls"
Paper = "https://arxiv.org/abs/2605.05284"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "adam-dls"
version = "0.1.0"
description = "Darwinian Lineage Simulation Optimizer"
authors = [{name = "Daniel Grimmer", email = "daniel.grimmer@yale.edu"}]
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = ["torch>=2.0.0"]
